# testpublish

./: LICENSE  README.md  pyproject.toml
.github/workflows/: .publish.yml.swp  build.yml  github_release.yml  publish.yml
hereismyveryniceproject/: __init__.py
