[tool.poetry]
name = "HereIsMyVeryNiceProject"
version = "4.0.1"
description = "Test"
authors = ["Tommaso Comparin <3862206+tcompa@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.org/home"
repository = "https://example.org/repo"
documentation = "https://example.org/docs"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
bumpver = "^2023.1126"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "4.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]

